# mebelBot-deploy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BITRIX24_CHECKLIST.md  CONTEXT.md  Dockerfile  GEMINI.md  MVP_REVIEW.md  PRODUCTION_INPUTS.md  README.md  SECRET_TESTS.md  SPEC.md  TASKS.md  pyproject.toml  security_best_practices_report.md
data/: speakers.csv  speakers.production.template.csv
data/qr-demo/: manifest.csv
deploy guides/: deploy_guide.html  deploy_guide_ai.md
docs/customer/: Чеклист для заказчика.docx
mvp/: main.py  requirements.txt
omx_wiki/: architecture-map.md  bitrix24-context.md  configuration-and-secrets.md  customer-handoff.md  decisions-and-rules.md  index.md  log.md  operations-and-monitoring.md  project-overview.md  qr-and-attribution.md  runtime-commands.md  session-log-2026-05-27.md
src/mebelbot/: __init__.py  __main__.py  app.py  bitrix.py  config.py  content.py  crm.py  domain.py  flow.py  max_bot.py  qr.py  storage.py  telegram_bot.py
tests/: test_app.py  test_bitrix.py  test_config.py  test_content.py  test_crm.py  test_domain.py  test_flow.py  test_max_bot.py  test_qr.py  test_storage.py  test_telegram_bot.py
