[project]
name = "mebelbot"
version = "0.1.0"
description = "Telegram and Max chatbot with Bitrix24 integration and speaker attribution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.6,<4",
  "fastapi>=0.111,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.2,<3",
  "python-dotenv>=1.0,<2",
  "qrcode[pil]>=7.4,<8",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-asyncio>=0.23,<1",
  "ruff>=0.5,<1",
]

[project.scripts]
mebelbot = "mebelbot.__main__:main"
mebelbot-qr = "mebelbot.qr:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mebelbot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
